# AstroXplorer

./: CMakeLists.txt  Coordinates2D.h  Position3D.h  README.md  TileMatrix.h  apihandler.cpp  apihandler.h  cfgloader.cpp  cfgloader.h  config  enums.cpp  enums.h  epic.cpp  epic.h  epicimage.cpp  epicimage.h  fontCfg  imagemanipulation.cpp  imagemanipulation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maplayer.cpp  maplayer.h  maps.cpp  maps.h  maptile.cpp  maptile.h  podcast.cpp  podcast.h  podcastepisode.cpp  podcastepisode.h  podcasts.cpp  podcasts.h  tilematrixset.cpp  tilematrixset.h
maps/: WMTSCapabilities.xml
podcasts/sources/: Houston-We-Have-a-Podcast.rss  NASA-in-Silicon-Valley.rss  TWAN_podcast.rss
